# fftbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/fftbench/: benchmarks.hpp  main.cpp  tests.hpp
data/: fftbench.csv  fftbench_example.csv
data/atom/: fftbench_multithread.csv
script/: setup_linux.sh  setup_pffft.sh  show_benchmark_results.py
src/: Benchmarks.hpp  Main.cpp  Math.hpp  Precompiled.hpp  Tests.hpp  benchmarks.hpp  tests.hpp
src/fft_bench/: Benchmarks.hpp  Main.cpp  Precompiled.hpp  Tests.hpp
src/fft_fftw/: Main.cpp
src/fft_ipp/: Main.cpp
src/fftw_memory/: Main.cpp
src/fftw_wisdom/: Main.cpp
src/utils/: Timer.hpp
tools/: build.sh  deploy.sh  download_results.sh  run_benchmark_csv.sh  run_memory.sh  setup_fftw.sh  setup_ipp.sh  setup_linux.sh  show_benchmark_results.py
